--- a/index.html
+++ b/index.html
@@ -1,15 +1,94 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./static/styles.css" rel="stylesheet">
-  <!-- <link href="./static/output.css" rel="stylesheet"> -->
+  <link href="./static/output.css" rel="stylesheet">
   <title>Tailwind CSS</title>
 </head>
+
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+
+  <form class="flex items-center justify-center space-x-6 mt-10">
+    <div class="shrink-0">
+      <img class="h-16 w-16 object-cover rounded-full " src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1361&q=80" alt="Current profile photo" />
+    </div>
+    <label class="flex-row">
+      <span class="sr-only contents ">Choose profile photo</span>
+      <input type="file" class="block w-full text-sm text-slate-500
+        file:mr-4 file:py-2 file:px-4
+        file:rounded-full file:border-0
+        file:text-sm file:font-semibold
+        file:bg-violet-50 file:text-violet-700
+        hover:file:bg-violet-100
+      "/>
+    </label>
+</form>
+<ul role="list" class="table text-left my-10 mx-auto marker:text-sky-400 list-disc pl-5 space-y-3 text-slate-500">
+  <li>5 cups chopped Porcini mushrooms</li>
+  <li>1/2 cup of olive oil</li>
+  <li>3lb of celery</li>
+</ul>
+<div class="">
+  <p class="first-line:uppercase first-line:tracking-widest
+  first-letter:text-7xl first-letter:font-bold first-letter:text-slate-900
+  first-letter:mr-3 first-letter:float-left my-0 mx-auto w-96 text-left">
+    So I started to walk into the water. I won't lie to you boys, I was
+    terrified. But I pressed on, and as I made my way past the breakers
+    a strange calm came over me. I don't know if it was divine intervention
+    or the kinship of all living things but I tell you Jerry at that moment,
+    I <em>was</em> a marine biologist.
+  </p>
+</div>
+<button class="block bg-violet-500 rounded-lg my-0 mx-auto w-48 h-20 motion-safe:hover:-translate-x-0.5 motion-safe:transition active:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-300 ...">
+  Save changes
+</button>
+<form class="block text-center my-0 mx-auto">
+  <label class="block">
+    <span class="block text-sm font-medium text-slate-700">Social Security Number</span>
+    <input class="border border-slate-700 placeholder-slate-400 contrast-more:border-slate-400 contrast-more:placeholder-slate-500"/>
+    <p class="mt-2 opacity-80 contrast-more:opacity-100 text-slate-600 text-sm">
+      We need this to steal your identity.
+    </p>
+  </label>
+</form>
+
+<div>
+  <article class="print:hidden">
+    <h1>My Secret Pizza Recipe</h1>
+    <p>This recipe is a secret, and must not be shared with anyone</p>
+  </article>
+  <div class="hidden print:block">
+    Are you seriously trying to print this? It's secret!
+  </div>
+</div>
+
+<div class="max-w-lg mx-auto p-8 ">
+  <details class="open:bg-white  dark:open:bg-slate-500 open:ring-1 open:ring-pink-50/5 dark:open:ring-white/10 open:shadow-lg p-6
+  rounded-lg" open>
+    <summary class="text-sm leading-6 text-black dark:text-black-400 font-semibold select-none">
+      Why do they call it Ovaltine?
+    </summary>
+    <div class="mt-3 text-sm leading-6 text-slate-600 dark:text-slate-400">
+      <p>The mug is round. The jar is round. They should call it Roundtine.</p>
+    </div>
+  </details>
+</div>
+
+<div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl">
+  <div class="md:flex">
+    <div class="md:shrink-0">
+      <img class="h-48 w-full object-cover md:h-full md:w-48" src="/img/building.jpg" alt="Modern building architecture">
+    </div>
+    <div class="p-8">
+      <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Company retreats</div>
+      <a href="/" class="block mt-1 text-lg leading-tight font-medium text-black hover:underline">Incredible accomodation for your team</a>
+      <p class="mt-2 text-slate-500">Looking to take your team away on a retreat to enjoy awesome food and take in some sunshine? We have a list of places to do just that.</p>
+    </div>
+  </div>    
+</div>
+
 </body>
+
 </html>
